fix: add text-overflow: ellipsis to review product name to prevent card expansion

--- a/client/src/components/admin/ReviewsManagement/ReviewsList/ReviewCard/index.module.scss
+++ b/client/src/components/admin/ReviewsManagement/ReviewsList/ReviewCard/index.module.scss
@@ -38,6 +38,12 @@
         font-weight: 400;
         font-size: 20px;
         line-height: 160%;
+        display: -webkit-box;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
       }
     }
   }
@@ -129,6 +135,10 @@
       flex-direction: row;
       justify-content: space-between;
       margin-bottom: 16px;
+
+      p:last-of-type {
+        text-wrap: nowrap;
+      }
     }
 
     .approveButtonsWrap {
